# InvestingAssistant

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-lambda.txt
.github/workflows/: deploy.yml
config/: companies_interested.json
infrastructure/: app.py  cdk.json
infrastructure/stacks/: __init__.py  api_stack.py  frontend_stack.py  pipeline_stack.py  storage_stack.py
scripts/: bootstrap_aws.sh  deploy.sh  local_run.py  run_api.py
src/: __init__.py
src/analyzers/: __init__.py
src/analyzers/impact_scorer/: __init__.py  handler.py  requirements.txt  scoring_engine.py
src/analyzers/sentiment_analyzer/: __init__.py  handler.py  llm_client.py  prompts.py  requirements.txt
src/api/: __init__.py  auth.py  handler.py  requirements.txt
src/api/routes/: analysis.py  companies.py  dashboard.py  helpers.py  job_runs.py  pipeline.py
src/frontend/: index.html  package-lock.json  vite.config.js
src/frontend/src/: App.jsx  index.css
src/frontend/src/components/: CompaniesView.jsx  CompanyCard.jsx  CompanyDetail.jsx  ConfidenceGauge.jsx  (+7 more)
src/scrapers/: __init__.py
src/scrapers/company_info_agent/: __init__.py  handler.py  investor_page_scraper.py  news_page_scraper.py  requirements.txt
src/scrapers/reddit_agent/: __init__.py  handler.py  reddit_client.py  requirements.txt
src/scrapers/sec_agent/: __init__.py  edgar_client.py  filing_parser.py  handler.py  requirements.txt
src/scrapers/x_agent/: __init__.py  handler.py  requirements.txt  x_client.py
src/shared/: __init__.py  config.py  constants.py  job_logger.py  models.py  storage.py
(+2 files in other folders)
