[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "investing-assistant"
version = "0.1.0"
description = "Intelligent agent for monitoring and analyzing company stock information"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "praw>=7.7.0",
    "tweepy>=4.14.0",
    "google-genai>=1.0.0",
    "openai>=1.30.0",
    "anthropic>=0.25.0",
    "python-dotenv>=1.0.0",
    "mangum>=0.17.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "moto[dynamodb,s3]>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "boto3-stubs[dynamodb,s3,secretsmanager]>=1.34.0",
]
cdk = [
    "aws-cdk-lib>=2.140.0",
    "constructs>=10.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
